--- a/css/repertoire.css
+++ b/css/repertoire.css
@@ -38,7 +38,7 @@ body{
 #enteteFormContact,
 #eteteListContact{
     width: 96%;
-    height: 30;
+    height: 30px;
     padding: 2%;
     background-color: #2f80ed;
     font-size:.9rem;
@@ -93,7 +93,7 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: left;
-    align-items: left;
+    align-items:flex-start;
 }
 #formulaire > .avatar{
     display: flex;
