--- a/css/repertoire.css
+++ b/css/repertoire.css
@@ -11,6 +11,7 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 body{
     background-color: #000000;
@@ -168,6 +169,7 @@ body{
 /* Formulaire */
 #formulaire input[type=text],
 #formulaire  select{
+    width: 100%;
     height: 35px;
     color: #000000;
 }
