--- a/css/repertoire.css
+++ b/css/repertoire.css
@@ -25,8 +25,8 @@ body{
     font-family: Roboto,sans-serif; 
 }
 #entetecontact{
-    width: 96%;
-    height: 23px;
+    width: 100%;
+    height: 55px;
     padding: 2%;
     background-color: #2f80ed;
     font-size: .8rem;
@@ -38,8 +38,8 @@ body{
 }
 #enteteFormContact,
 #eteteListContact{
-    width: 96%;
-    height: 30px;
+    width: 100%;
+    height: 55px;
     padding: 2%;
     background-color: #2f80ed;
     font-size:.9rem;
@@ -180,6 +180,7 @@ body{
     margin: 0px 5px;
 }
 .inputStyle{
+    width: 100%;
     border-radius: 5px;
     margin: 5px 0px;
     padding: 5px 10px;
@@ -191,7 +192,6 @@ body{
     text-transform: capitalize;
     background-color: #ffffff;
     border: 1px solid #cbdefa;
-    box-sizing: border-box;
 }
 .inputStyle:focus{
     box-shadow: 4px 4px 15px 1px #cbdefa;
@@ -243,9 +243,10 @@ body{
     background-color: #e5e5e5;
     font-size:.8rem;
     padding: 5px;
-    width: 100px;
-    height: 20px;
+    width: 50%;
+    height: 30px;
     text-transform: none;
+    text-align: center;
     cursor: pointer;
 }
 form  select {
